# archsible

./: .ansible-lint  .gitignore  .gitmodules  .travis.yml  Pipfile  README.md  ansible.cfg  ansible.ci.cfg  base.yml  chroot.yml  hooks.sh  install.sh  install_unencrypted.sh  inventory  inventory.yml  pyproject.toml  renovate.json  requirements.yml  test-docker.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: Dockerfile
.github/workflows/: lint.yml  test.yml
group_vars/: all.yml
hooks/: pre-commit.hook
host_vars/: github-actions.yml  localhost  localhost.example  localhost.vault  localhost.yml.example
playbooks/: ansible.cfg  base.yml  github-actions.yml  home.desktop.yml  home.laptop.yml  work.laptop.yml  work.vm.yml
playbooks/vars/: home.desktop.yml  home.laptop.yml  work.laptop.yml  work.vm.yml
roles/antergos/files/: os-release
roles/antergos/tasks/: main.yml
roles/archive/tasks/: main.yml
roles/aws/tasks/: main.yml
roles/azure/tasks/: main.yml
roles/base/files/: pacman.conf
roles/base/handlers/: main.yml
roles/base/meta/: main.yml
roles/base/tasks/: journal.yml  main.yml  packages.yml  shell.yml  sudo.yml  user.yml
roles/base/templates/: sudoers.j2
roles/bluetooth/tasks/: main.yml
roles/broadcom/tasks/: main.yml
roles/browsers/files/: captive-browser.toml
roles/browsers/tasks/: captive-browser.yml  chrome.yml  chromium.yml  main.yml
roles/bumblebee/tasks/: main.yml
roles/calibre/tasks/: main.yml
roles/cups/handlers/: main.yml
roles/cups/tasks/: main.yml
roles/dconf/handlers/: main.yml
(+137 files in other folders)
