[tool.poetry]
name = "archsible"
version = "0.1.0"
description = "Archsible is a collection of Ansible playbooks for Arch Linux"
authors = ["Jamie Magee <jamie.magee@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
ansible = "^2.7"
passlib = "^1.7"

[tool.poetry.dev-dependencies]
yamllint = "^1.14"
ansible-lint = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
