[tool.poetry]
name = "archsible"
version = "0.1.0"
description = "Archsible is a collection of Ansible playbooks for Arch Linux"
authors = ["Jamie Magee <jamie.magee@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
ansible = "^2.8"
asn1crypto = "^1.0.0"
bcrypt = "^3.1"
cffi = "^1.12"
cryptography = "^38.0"
idna = "^2.8"
Jinja2 = "^2.10"
MarkupSafe = "^1.1"
paramiko = "^2.6"
pyasn1 = "^0.4.7"
pycparser = "^2.19"
PyNaCl = "^1.3"
PyYAML = "^5.1"
six = "^1.12"

[tool.poetry.dev-dependencies]
yamllint = "^1.17"
ansible-lint = "^4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
